@@ -1,91 +1,0 @@
-################################################################################
-# Makefile for AUDio MEasurement System                                        #
-# vaclavpe@seznam.cz                                                           #
-#                                                                              #
-################################################################################
-#
-# if you have SH.EXE from MinSYS in $PATH$ the makefile will
-# not work!!! (if exist error)
-#
-
-WXWIN=D:/wxWidgets-2.6.4
-#WXWIN=C:/wxWindows-2.4.2
-WXVERZ=2.6.4
-
-GCC_VERSION=3
-ifeq ($(GCC_VERSION),2.95)
-GCCFLAGS = -fvtable-thunks
-endif
-CXX=g++.exe
-RESCOMP=windres.exe
-OUTPUTPATH=ReleaseMSW
-OBJECTPATH=ReleaseMSW
-CPPFLAGS= -fno-rtti -fno-pcc-struct-return -fstrict-aliasing -Wall -D__WXMSW__ -D__GNUWIN32__ -D__WIN95__
-CPPFLAGS  += -DEMBED_RTAUDIO
-WARNINGFLAGS=-Wall
-OPTFLAGS=-O2
-DEBUGFLAGS=
-LINKERFLAGS=-Wl,--subsystem,windows -mwindows
-RESPATH=--include-dir "$(WXWIN)/include" --include-dir "$(WXWIN)/contrib/include" --include-dir "$(WXWIN)/lib/gcc_lib/msw"
-
-ifeq ($(WXWIN),C:/wxWindows-2.4.2)
-LIBS=-lwxmsw -lregex -lpng -ljpeg -lzlib -ltiff -lstdc++ -lgcc -lodbc32 -lwsock32 -lwinspool -lwinmm -lshell32 -lcomctl32 -lctl3d32 -lodbc32 -ladvapi32 -lodbc32 -lwsock32 -lopengl32 -lglu32 -lole32 -loleaut32 -luuid  
-CPPINC=-I"$(WXWIN)/include" -I"$(WXWIN)/contrib/include" -I"$(WXWIN)/lib/msw"
-LIBPATH=-L"$(WXWIN)/lib"
-else
-LIBS=-lwxmsw26_xrc -lwxmsw26_adv -lwxmsw26_html -lwxmsw26_core -lwxbase26 -lwxbase26_net -lwxbase26_xml -lwxtiff -lwxjpeg -lwxpng -lwxzlib -lwxregex -lwxexpat -lkernel32 -luser32 -lgdi32 -lcomdlg32 -lwinspool -lwinmm -lshell32 -lcomctl32 -lole32 -loleaut32 -luuid -lrpcrt4 -ladvapi32 -lwsock32
-CPPINC=-I"$(WXWIN)/include" -I"$(WXWIN)/contrib/include" -I"$(WXWIN)/lib/gcc_lib/msw"
-LIBPATH=-L"$(WXWIN)/lib/gcc_lib"
-endif
-
-RCFILEOBJ=_audmes_rc.o
-RCFILESRC=audmes.rc
-
-PROGRAM=AudMeS.exe
-
-OBJECTS=$(OBJECTPATH)/_AudMeS.o $(OBJECTPATH)/dlg_audiointerface.o $(OBJECTPATH)/RWAudio.o $(OBJECTPATH)/RtAudio.o $(OBJECTPATH)/CtrlOScope.o $(OBJECTPATH)/fourier.o  audiolib/libdsound.a $(OBJECTPATH)/$(RCFILEOBJ)
-
-
-all:	$(OBJECTPATH)
-
-$(OBJECTPATH):
-	-if not exist $(OBJECTPATH) mkdir $(OBJECTPATH)
-
-clean:
-	-if exist $(OBJECTPATH)\*.o del $(OBJECTPATH)\*.o
-	-if exist $(OBJECTPATH)\*.res del $(OBJECTPATH)\*.res
-	-if exist $(OUTPUTPATH)\$(PROGRAM) del $(OUTPUTPATH)\$(PROGRAM)
-
-help:
-	@echo "Usage: make -f makefile.gcc CONFIG=[debug|release] [all|clean|help]"
-
-### Targets ####
-
-all:	$(OUTPUTPATH)/$(PROGRAM)
-
-$(OUTPUTPATH)/$(PROGRAM):	$(OBJECTS)
-	$(CXX) -o $@ $(OBJECTS) $(LIBPATH) $(LINKERFLAGS) $(LIBS)
-	strip $@
-
-$(OBJECTPATH)/_AudMeS.o:	AudMeS.cpp
-	$(CXX) -c -o $@ $(CPPFLAGS) $(GCCFLAGS) $(DEBUGFLAGS) $(OPTFLAGS) $(WARNINGFLAGS) $(CPPINC) $<
-
-$(OBJECTPATH)/CtrlOScope.o:	CtrlOScope.cpp
-	$(CXX) -c -o $@ $(CPPFLAGS) $(GCCFLAGS) $(DEBUGFLAGS) $(OPTFLAGS) $(WARNINGFLAGS) $(CPPINC) $<
-
-$(OBJECTPATH)/fourier.o:	fourier.c
-	$(CXX) -c -o $@ $(CPPFLAGS) $(GCCFLAGS) $(DEBUGFLAGS) $(OPTFLAGS) $(WARNINGFLAGS) $(CPPINC) $<
-
-$(OBJECTPATH)/dlg_audiointerface.o:	dlg_audiointerface.cpp
-	$(CXX) -c -o $@ $(CPPFLAGS) $(GCCFLAGS) $(DEBUGFLAGS) $(OPTFLAGS) $(WARNINGFLAGS) $(CPPINC) $<
-
-$(OUTPUTPATH)/RWAudio.o :	RWAudio_IO.cpp
-	$(CXX) -c -o $@ -D__WINDOWS_DS__ -I"./audiolib" $(CPPFLAGS) $(GCCFLAGS) $(DEBUGFLAGS) $(OPTFLAGS) $(WARNINGFLAGS) $(CPPINC) $<
-
-$(OBJECTPATH)/RtAudio.o:	audiolib/RtAudio.cpp
-	$(CXX) -c -o $@ -D__WINDOWS_DS__ -I"./audiolib" $(CPPFLAGS) $(GCCFLAGS) $(DEBUGFLAGS) $(OPTFLAGS) $(WARNINGFLAGS) $(CPPINC) $<
-
-$(OBJECTPATH)/$(RCFILEOBJ):	$(RCFILESRC)
-	$(RESCOMP) --use-temp-file -i$< -o$@ $(RESPATH) --include-dir . --define NOPCH
-
-.PHONY:	all clean
