@@ -1,67 +1,0 @@
-### Do not edit -- Generated by 'configure --with-whatever' from Makefile.in
-### RtAudio tests Makefile - for various flavors of unix and MinGW
-
-RM = /bin/rm
-SRC_PATH = ..
-INCLUDE = ..
-OBJECTPATH = Release
-vpath %.o $(OBJECTPATH)
-
-OBJECTS=\
-	$(OBJECTPATH)/_AudMeS.o \
-	$(OBJECTPATH)/dlg_audiointerface.o \
-	$(OBJECTPATH)/RWAudio.o \
-	$(OBJECTPATH)/CtrlOScope.o \
-	$(OBJECTPATH)/fourier.o
-
-CXX      = c++
-DEFS     =
-CFLAGS   = -g -O2 
-CFLAGS  += -Wall -Wextra -I$(INCLUDE) -I../include
-LIBRARY +=
-
-# Enable this and disable embedded block below to use system provided rtaudio 
-#LIBRARY  = -lrtaudio
-
-# Embedded block
-CFLAGS  += -DEMBED_RTAUDIO
-DEFS    += -D__LINUX_ALSA__ -D__LINUX__ -D__CPP__ -DHAVE_GETTIMEOFDAY 
-OBJECTS += $(OBJECTPATH)/RtAudio.o
-LIBRARY += -lasound -lpthread
-
-HEADERS = $(shell wx-config --cxxflags)
-LIBS = $(shell wx-config --libs)
-
-TARGETNAME=AudMeS
-
-all : $(OBJECTPATH) $(OBJECTPATH)/$(TARGETNAME)
-
-$(OBJECTPATH):
-	if [ ! -e $(OBJECTPATH) ] ;then mkdir $(OBJECTPATH) ; fi
-
-$(OBJECTPATH)/$(TARGETNAME):  $(OBJECTS)
-	$(CXX) $(CFLAGS) -o $@ $(OBJECTS) $(LIBRARY) $(LIBS)
-
-$(OBJECTPATH)/_AudMeS.o:        AudMeS.cpp
-	$(CXX) -c $(CFLAGS) $(CPPFLAGS) -c $(HEADERS) -o $@ $<
-
-$(OBJECTPATH)/CtrlOScope.o:     CtrlOScope.cpp
-	$(CXX) -c $(CFLAGS) $(CPPFLAGS) -c $(HEADERS) -o $@ $<
-
-$(OBJECTPATH)/fourier.o:        fourier.c
-	$(CXX) -c $(CFLAGS) $(CPPFLAGS) -c $(HEADERS) -o $@ $<
-
-$(OBJECTPATH)/dlg_audiointerface.o:     dlg_audiointerface.cpp
-	$(CXX) -c $(CFLAGS) $(CPPFLAGS) -c $(HEADERS) -o $@ $<
-
-$(OBJECTPATH)/RWAudio.o :       RWAudio_IO.cpp
-	$(CXX) -c $(CFLAGS) $(CPPFLAGS) -c $(HEADERS) -o $@ $<
-
-
-$(OBJECTPATH)/RtAudio.o:        audiolib/RtAudio.cpp
-	$(CXX) -c $(CFLAGS) $(DEFS) -o $@ $<
-
-
-clean:
-	if [ -e $(OBJECTPATH) ] ;then rm -rf $(OBJECTPATH) ; fi
-
