@@ -1,5 +1,6 @@
-2020-??-??
+2020-07-01
 ----------
+ - Migrate to CMake.
  - Migrate README to markdown and move change list to NEWS.
  - Migrated project from subversion to git.
 
